// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`brute force Array | Boolean 1`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of true",
    "type": "Error",
  },
  "inputs": Array [
    Array [],
    true,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Array | Boolean 2`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of true",
    "type": "Error",
  },
  "inputs": Array [
    Array [
      Array [],
    ],
    true,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Array | Boolean 3`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of true",
    "type": "Error",
  },
  "inputs": Array [
    Array [
      Array [
        1,
      ],
      Array [
        2,
      ],
    ],
    true,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Array | Boolean 4`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of true",
    "type": "Error",
  },
  "inputs": Array [
    Array [],
    true,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Array | Boolean 5`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of true",
    "type": "Error",
  },
  "inputs": Array [
    Array [
      Array [],
    ],
    true,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Array | Boolean 6`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of true",
    "type": "Error",
  },
  "inputs": Array [
    Array [
      Array [
        1,
      ],
      Array [
        2,
      ],
    ],
    true,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Array | Null 1`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of null",
    "type": "Error",
  },
  "inputs": Array [
    Array [],
    null,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'indexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Array | Null 2`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of null",
    "type": "Error",
  },
  "inputs": Array [
    Array [
      Array [],
    ],
    null,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'indexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Array | Null 3`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of null",
    "type": "Error",
  },
  "inputs": Array [
    Array [
      Array [
        1,
      ],
      Array [
        2,
      ],
    ],
    null,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'indexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Array | Null 4`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of null",
    "type": "Error",
  },
  "inputs": Array [
    Array [],
    null,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'lastIndexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Array | Null 5`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of null",
    "type": "Error",
  },
  "inputs": Array [
    Array [
      Array [],
    ],
    null,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'lastIndexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Array | Null 6`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of null",
    "type": "Error",
  },
  "inputs": Array [
    Array [
      Array [
        1,
      ],
      Array [
        2,
      ],
    ],
    null,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'lastIndexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Array | Object 1`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of [object Object]",
    "type": "Error",
  },
  "inputs": Array [
    Array [],
    Object {},
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Array | Object 2`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of [object Object]",
    "type": "Error",
  },
  "inputs": Array [
    Array [
      Array [],
    ],
    Object {},
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Array | Object 3`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of [object Object]",
    "type": "Error",
  },
  "inputs": Array [
    Array [
      Array [
        1,
      ],
      Array [
        2,
      ],
    ],
    Object {},
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Array | Object 4`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of [object Object]",
    "type": "Error",
  },
  "inputs": Array [
    Array [],
    Object {},
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Array | Object 5`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of [object Object]",
    "type": "Error",
  },
  "inputs": Array [
    Array [
      Array [],
    ],
    Object {},
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Array | Object 6`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of [object Object]",
    "type": "Error",
  },
  "inputs": Array [
    Array [
      Array [
        1,
      ],
      Array [
        2,
      ],
    ],
    Object {},
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Array | String 1`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of foo",
    "type": "Error",
  },
  "inputs": Array [
    Array [],
    "foo",
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": 0,
  "result": "PENDING",
}
`;

exports[`brute force Array | String 2`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of foo",
    "type": "Error",
  },
  "inputs": Array [
    Array [
      Array [],
    ],
    "foo",
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": 0,
  "result": "PENDING",
}
`;

exports[`brute force Array | String 3`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of foo",
    "type": "Error",
  },
  "inputs": Array [
    Array [
      Array [
        1,
      ],
      Array [
        2,
      ],
    ],
    "foo",
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Array | String 4`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of foo",
    "type": "Error",
  },
  "inputs": Array [
    Array [],
    "foo",
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": 3,
  "result": "PENDING",
}
`;

exports[`brute force Array | String 5`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of foo",
    "type": "Error",
  },
  "inputs": Array [
    Array [
      Array [],
    ],
    "foo",
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": 3,
  "result": "PENDING",
}
`;

exports[`brute force Array | String 6`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of foo",
    "type": "Error",
  },
  "inputs": Array [
    Array [
      Array [
        1,
      ],
      Array [
        2,
      ],
    ],
    "foo",
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Array | Undefined 1`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of undefined",
    "type": "Error",
  },
  "inputs": Array [
    Array [],
    undefined,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of undefined (reading 'indexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Array | Undefined 2`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of undefined",
    "type": "Error",
  },
  "inputs": Array [
    Array [
      Array [],
    ],
    undefined,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of undefined (reading 'indexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Array | Undefined 3`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of undefined",
    "type": "Error",
  },
  "inputs": Array [
    Array [
      Array [
        1,
      ],
      Array [
        2,
      ],
    ],
    undefined,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of undefined (reading 'indexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Array | Undefined 4`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of undefined",
    "type": "Error",
  },
  "inputs": Array [
    Array [],
    undefined,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of undefined (reading 'lastIndexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Array | Undefined 5`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of undefined",
    "type": "Error",
  },
  "inputs": Array [
    Array [
      Array [],
    ],
    undefined,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of undefined (reading 'lastIndexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Array | Undefined 6`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of undefined",
    "type": "Error",
  },
  "inputs": Array [
    Array [
      Array [
        1,
      ],
      Array [
        2,
      ],
    ],
    undefined,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of undefined (reading 'lastIndexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Boolean | Boolean 1`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of true",
    "type": "Error",
  },
  "inputs": Array [
    true,
    true,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Boolean | Boolean 2`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of true",
    "type": "Error",
  },
  "inputs": Array [
    true,
    true,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Boolean | Null 1`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of null",
    "type": "Error",
  },
  "inputs": Array [
    true,
    null,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'indexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Boolean | Null 2`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of null",
    "type": "Error",
  },
  "inputs": Array [
    true,
    null,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'lastIndexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Boolean | Object 1`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of [object Object]",
    "type": "Error",
  },
  "inputs": Array [
    true,
    Object {},
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Boolean | Object 2`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of [object Object]",
    "type": "Error",
  },
  "inputs": Array [
    true,
    Object {},
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Boolean | String 1`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of foo",
    "type": "Error",
  },
  "inputs": Array [
    true,
    "foo",
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Boolean | String 2`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of foo",
    "type": "Error",
  },
  "inputs": Array [
    true,
    "foo",
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Boolean | Undefined 1`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of undefined",
    "type": "Error",
  },
  "inputs": Array [
    true,
    undefined,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of undefined (reading 'indexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Boolean | Undefined 2`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of undefined",
    "type": "Error",
  },
  "inputs": Array [
    true,
    undefined,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of undefined (reading 'lastIndexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Function | Boolean 1`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of true",
    "type": "Error",
  },
  "inputs": Array [
    [Function],
    true,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Function | Boolean 2`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of true",
    "type": "Error",
  },
  "inputs": Array [
    [Function],
    true,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Function | Null 1`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of null",
    "type": "Error",
  },
  "inputs": Array [
    [Function],
    null,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'indexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Function | Null 2`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of null",
    "type": "Error",
  },
  "inputs": Array [
    [Function],
    null,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'lastIndexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Function | Object 1`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of [object Object]",
    "type": "Error",
  },
  "inputs": Array [
    [Function],
    Object {},
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Function | Object 2`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of [object Object]",
    "type": "Error",
  },
  "inputs": Array [
    [Function],
    Object {},
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Function | String 1`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of foo",
    "type": "Error",
  },
  "inputs": Array [
    [Function],
    "foo",
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Function | String 2`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of foo",
    "type": "Error",
  },
  "inputs": Array [
    [Function],
    "foo",
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Function | Undefined 1`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of undefined",
    "type": "Error",
  },
  "inputs": Array [
    [Function],
    undefined,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of undefined (reading 'indexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Function | Undefined 2`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of undefined",
    "type": "Error",
  },
  "inputs": Array [
    [Function],
    undefined,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of undefined (reading 'lastIndexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force NaN | Boolean 1`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of true",
    "type": "Error",
  },
  "inputs": Array [
    NaN,
    true,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force NaN | Boolean 2`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of true",
    "type": "Error",
  },
  "inputs": Array [
    NaN,
    true,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force NaN | Null 1`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of null",
    "type": "Error",
  },
  "inputs": Array [
    NaN,
    null,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'indexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force NaN | Null 2`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of null",
    "type": "Error",
  },
  "inputs": Array [
    NaN,
    null,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'lastIndexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force NaN | Object 1`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of [object Object]",
    "type": "Error",
  },
  "inputs": Array [
    NaN,
    Object {},
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force NaN | Object 2`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of [object Object]",
    "type": "Error",
  },
  "inputs": Array [
    NaN,
    Object {},
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force NaN | String 1`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of foo",
    "type": "Error",
  },
  "inputs": Array [
    NaN,
    "foo",
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force NaN | String 2`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of foo",
    "type": "Error",
  },
  "inputs": Array [
    NaN,
    "foo",
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force NaN | Undefined 1`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of undefined",
    "type": "Error",
  },
  "inputs": Array [
    NaN,
    undefined,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of undefined (reading 'indexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force NaN | Undefined 2`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of undefined",
    "type": "Error",
  },
  "inputs": Array [
    NaN,
    undefined,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of undefined (reading 'lastIndexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Null | Boolean 1`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of true",
    "type": "Error",
  },
  "inputs": Array [
    null,
    true,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Null | Boolean 2`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of true",
    "type": "Error",
  },
  "inputs": Array [
    null,
    true,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Null | Null 1`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of null",
    "type": "Error",
  },
  "inputs": Array [
    null,
    null,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'indexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Null | Null 2`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of null",
    "type": "Error",
  },
  "inputs": Array [
    null,
    null,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'lastIndexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Null | Object 1`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of [object Object]",
    "type": "Error",
  },
  "inputs": Array [
    null,
    Object {},
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Null | Object 2`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of [object Object]",
    "type": "Error",
  },
  "inputs": Array [
    null,
    Object {},
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Null | String 1`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of foo",
    "type": "Error",
  },
  "inputs": Array [
    null,
    "foo",
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Null | String 2`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of foo",
    "type": "Error",
  },
  "inputs": Array [
    null,
    "foo",
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Null | Undefined 1`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of undefined",
    "type": "Error",
  },
  "inputs": Array [
    null,
    undefined,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of undefined (reading 'indexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Null | Undefined 2`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of undefined",
    "type": "Error",
  },
  "inputs": Array [
    null,
    undefined,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of undefined (reading 'lastIndexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Number | Boolean 1`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of true",
    "type": "Error",
  },
  "inputs": Array [
    3,
    true,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Number | Boolean 2`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of true",
    "type": "Error",
  },
  "inputs": Array [
    4,
    true,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Number | Boolean 3`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of true",
    "type": "Error",
  },
  "inputs": Array [
    3,
    true,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Number | Boolean 4`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of true",
    "type": "Error",
  },
  "inputs": Array [
    4,
    true,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Number | Null 1`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of null",
    "type": "Error",
  },
  "inputs": Array [
    3,
    null,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'indexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Number | Null 2`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of null",
    "type": "Error",
  },
  "inputs": Array [
    4,
    null,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'indexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Number | Null 3`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of null",
    "type": "Error",
  },
  "inputs": Array [
    3,
    null,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'lastIndexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Number | Null 4`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of null",
    "type": "Error",
  },
  "inputs": Array [
    4,
    null,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'lastIndexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Number | Object 1`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of [object Object]",
    "type": "Error",
  },
  "inputs": Array [
    3,
    Object {},
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Number | Object 2`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of [object Object]",
    "type": "Error",
  },
  "inputs": Array [
    4,
    Object {},
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Number | Object 3`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of [object Object]",
    "type": "Error",
  },
  "inputs": Array [
    3,
    Object {},
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Number | Object 4`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of [object Object]",
    "type": "Error",
  },
  "inputs": Array [
    4,
    Object {},
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Number | String 1`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of foo",
    "type": "Error",
  },
  "inputs": Array [
    3,
    "foo",
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Number | String 2`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of foo",
    "type": "Error",
  },
  "inputs": Array [
    4,
    "foo",
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Number | String 3`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of foo",
    "type": "Error",
  },
  "inputs": Array [
    3,
    "foo",
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Number | String 4`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of foo",
    "type": "Error",
  },
  "inputs": Array [
    4,
    "foo",
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Number | Undefined 1`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of undefined",
    "type": "Error",
  },
  "inputs": Array [
    3,
    undefined,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of undefined (reading 'indexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Number | Undefined 2`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of undefined",
    "type": "Error",
  },
  "inputs": Array [
    4,
    undefined,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of undefined (reading 'indexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Number | Undefined 3`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of undefined",
    "type": "Error",
  },
  "inputs": Array [
    3,
    undefined,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of undefined (reading 'lastIndexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Number | Undefined 4`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of undefined",
    "type": "Error",
  },
  "inputs": Array [
    4,
    undefined,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of undefined (reading 'lastIndexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Object | Boolean 1`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of true",
    "type": "Error",
  },
  "inputs": Array [
    Object {
      "a": 1,
    },
    true,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Object | Boolean 2`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of true",
    "type": "Error",
  },
  "inputs": Array [
    Object {
      "a": 1,
    },
    true,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Object | Boolean 3`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of true",
    "type": "Error",
  },
  "inputs": Array [
    Object {
      "a": 2,
    },
    true,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Object | Boolean 4`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of true",
    "type": "Error",
  },
  "inputs": Array [
    Object {
      "a": 1,
    },
    true,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Object | Boolean 5`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of true",
    "type": "Error",
  },
  "inputs": Array [
    Object {
      "a": 1,
    },
    true,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Object | Boolean 6`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of true",
    "type": "Error",
  },
  "inputs": Array [
    Object {
      "a": 2,
    },
    true,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Object | Null 1`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of null",
    "type": "Error",
  },
  "inputs": Array [
    Object {
      "a": 1,
    },
    null,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'indexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Object | Null 2`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of null",
    "type": "Error",
  },
  "inputs": Array [
    Object {
      "a": 1,
    },
    null,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'indexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Object | Null 3`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of null",
    "type": "Error",
  },
  "inputs": Array [
    Object {
      "a": 2,
    },
    null,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'indexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Object | Null 4`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of null",
    "type": "Error",
  },
  "inputs": Array [
    Object {
      "a": 1,
    },
    null,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'lastIndexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Object | Null 5`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of null",
    "type": "Error",
  },
  "inputs": Array [
    Object {
      "a": 1,
    },
    null,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'lastIndexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Object | Null 6`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of null",
    "type": "Error",
  },
  "inputs": Array [
    Object {
      "a": 2,
    },
    null,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'lastIndexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Object | Object 1`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of [object Object]",
    "type": "Error",
  },
  "inputs": Array [
    Object {
      "a": 1,
    },
    Object {},
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Object | Object 2`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of [object Object]",
    "type": "Error",
  },
  "inputs": Array [
    Object {
      "a": 1,
    },
    Object {},
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Object | Object 3`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of [object Object]",
    "type": "Error",
  },
  "inputs": Array [
    Object {
      "a": 2,
    },
    Object {},
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Object | Object 4`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of [object Object]",
    "type": "Error",
  },
  "inputs": Array [
    Object {
      "a": 1,
    },
    Object {},
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Object | Object 5`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of [object Object]",
    "type": "Error",
  },
  "inputs": Array [
    Object {
      "a": 1,
    },
    Object {},
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Object | Object 6`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of [object Object]",
    "type": "Error",
  },
  "inputs": Array [
    Object {
      "a": 2,
    },
    Object {},
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Object | String 1`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of foo",
    "type": "Error",
  },
  "inputs": Array [
    Object {
      "a": 1,
    },
    "foo",
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Object | String 2`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of foo",
    "type": "Error",
  },
  "inputs": Array [
    Object {
      "a": 1,
    },
    "foo",
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Object | String 3`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of foo",
    "type": "Error",
  },
  "inputs": Array [
    Object {
      "a": 2,
    },
    "foo",
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Object | String 4`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of foo",
    "type": "Error",
  },
  "inputs": Array [
    Object {
      "a": 1,
    },
    "foo",
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Object | String 5`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of foo",
    "type": "Error",
  },
  "inputs": Array [
    Object {
      "a": 1,
    },
    "foo",
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Object | String 6`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of foo",
    "type": "Error",
  },
  "inputs": Array [
    Object {
      "a": 2,
    },
    "foo",
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Object | Undefined 1`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of undefined",
    "type": "Error",
  },
  "inputs": Array [
    Object {
      "a": 1,
    },
    undefined,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of undefined (reading 'indexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Object | Undefined 2`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of undefined",
    "type": "Error",
  },
  "inputs": Array [
    Object {
      "a": 1,
    },
    undefined,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of undefined (reading 'indexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Object | Undefined 3`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of undefined",
    "type": "Error",
  },
  "inputs": Array [
    Object {
      "a": 2,
    },
    undefined,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of undefined (reading 'indexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Object | Undefined 4`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of undefined",
    "type": "Error",
  },
  "inputs": Array [
    Object {
      "a": 1,
    },
    undefined,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of undefined (reading 'lastIndexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Object | Undefined 5`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of undefined",
    "type": "Error",
  },
  "inputs": Array [
    Object {
      "a": 1,
    },
    undefined,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of undefined (reading 'lastIndexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Object | Undefined 6`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of undefined",
    "type": "Error",
  },
  "inputs": Array [
    Object {
      "a": 2,
    },
    undefined,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of undefined (reading 'lastIndexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Promise | Boolean 1`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of true",
    "type": "Error",
  },
  "inputs": Array [
    Promise {},
    true,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Promise | Boolean 2`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of true",
    "type": "Error",
  },
  "inputs": Array [
    Promise {},
    true,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Promise | Null 1`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of null",
    "type": "Error",
  },
  "inputs": Array [
    Promise {},
    null,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'indexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Promise | Null 2`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of null",
    "type": "Error",
  },
  "inputs": Array [
    Promise {},
    null,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'lastIndexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Promise | Object 1`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of [object Object]",
    "type": "Error",
  },
  "inputs": Array [
    Promise {},
    Object {},
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Promise | Object 2`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of [object Object]",
    "type": "Error",
  },
  "inputs": Array [
    Promise {},
    Object {},
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Promise | String 1`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of foo",
    "type": "Error",
  },
  "inputs": Array [
    Promise {},
    "foo",
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Promise | String 3`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of foo",
    "type": "Error",
  },
  "inputs": Array [
    Promise {},
    "foo",
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Promise | Undefined 1`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of undefined",
    "type": "Error",
  },
  "inputs": Array [
    Promise {},
    undefined,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of undefined (reading 'indexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Promise | Undefined 2`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of undefined",
    "type": "Error",
  },
  "inputs": Array [
    Promise {},
    undefined,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of undefined (reading 'lastIndexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force RegExp | Boolean 1`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of true",
    "type": "Error",
  },
  "inputs": Array [
    /foo/,
    true,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force RegExp | Boolean 2`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of true",
    "type": "Error",
  },
  "inputs": Array [
    /bar/g,
    true,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force RegExp | Boolean 3`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of true",
    "type": "Error",
  },
  "inputs": Array [
    /foo/,
    true,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force RegExp | Boolean 4`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of true",
    "type": "Error",
  },
  "inputs": Array [
    /bar/g,
    true,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force RegExp | Null 1`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of null",
    "type": "Error",
  },
  "inputs": Array [
    /foo/,
    null,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'indexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force RegExp | Null 2`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of null",
    "type": "Error",
  },
  "inputs": Array [
    /bar/g,
    null,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'indexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force RegExp | Null 3`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of null",
    "type": "Error",
  },
  "inputs": Array [
    /foo/,
    null,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'lastIndexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force RegExp | Null 4`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of null",
    "type": "Error",
  },
  "inputs": Array [
    /bar/g,
    null,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'lastIndexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force RegExp | Object 1`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of [object Object]",
    "type": "Error",
  },
  "inputs": Array [
    /foo/,
    Object {},
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force RegExp | Object 2`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of [object Object]",
    "type": "Error",
  },
  "inputs": Array [
    /bar/g,
    Object {},
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force RegExp | Object 3`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of [object Object]",
    "type": "Error",
  },
  "inputs": Array [
    /foo/,
    Object {},
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force RegExp | Object 4`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of [object Object]",
    "type": "Error",
  },
  "inputs": Array [
    /bar/g,
    Object {},
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force RegExp | String 1`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of foo",
    "type": "Error",
  },
  "inputs": Array [
    /foo/,
    "foo",
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force RegExp | String 2`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of foo",
    "type": "Error",
  },
  "inputs": Array [
    /bar/g,
    "foo",
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force RegExp | String 3`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of foo",
    "type": "Error",
  },
  "inputs": Array [
    /foo/,
    "foo",
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force RegExp | String 4`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of foo",
    "type": "Error",
  },
  "inputs": Array [
    /bar/g,
    "foo",
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force RegExp | Undefined 1`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of undefined",
    "type": "Error",
  },
  "inputs": Array [
    /foo/,
    undefined,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of undefined (reading 'indexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force RegExp | Undefined 2`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of undefined",
    "type": "Error",
  },
  "inputs": Array [
    /bar/g,
    undefined,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of undefined (reading 'indexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force RegExp | Undefined 3`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of undefined",
    "type": "Error",
  },
  "inputs": Array [
    /foo/,
    undefined,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of undefined (reading 'lastIndexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force RegExp | Undefined 4`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of undefined",
    "type": "Error",
  },
  "inputs": Array [
    /bar/g,
    undefined,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of undefined (reading 'lastIndexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force String | Boolean 1`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of true",
    "type": "Error",
  },
  "inputs": Array [
    "foo",
    true,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force String | Boolean 2`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of true",
    "type": "Error",
  },
  "inputs": Array [
    "foo",
    true,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force String | Null 1`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of null",
    "type": "Error",
  },
  "inputs": Array [
    "foo",
    null,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'indexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force String | Null 2`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of null",
    "type": "Error",
  },
  "inputs": Array [
    "foo",
    null,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'lastIndexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force String | Object 1`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of [object Object]",
    "type": "Error",
  },
  "inputs": Array [
    "foo",
    Object {},
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force String | Object 2`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of [object Object]",
    "type": "Error",
  },
  "inputs": Array [
    "foo",
    Object {},
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force String | String 1`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of foo",
    "type": "Error",
  },
  "inputs": Array [
    "foo",
    "foo",
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": 0,
  "result": "PENDING",
}
`;

exports[`brute force String | String 2`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of foo",
    "type": "Error",
  },
  "inputs": Array [
    "foo",
    "foo",
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": 0,
  "result": "PENDING",
}
`;

exports[`brute force String | Undefined 1`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of undefined",
    "type": "Error",
  },
  "inputs": Array [
    "foo",
    undefined,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of undefined (reading 'indexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force String | Undefined 2`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of undefined",
    "type": "Error",
  },
  "inputs": Array [
    "foo",
    undefined,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of undefined (reading 'lastIndexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Undefined | Boolean 1`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of true",
    "type": "Error",
  },
  "inputs": Array [
    undefined,
    true,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Undefined | Boolean 2`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of true",
    "type": "Error",
  },
  "inputs": Array [
    undefined,
    true,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Undefined | Null 1`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of null",
    "type": "Error",
  },
  "inputs": Array [
    undefined,
    null,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'indexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Undefined | Null 2`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of null",
    "type": "Error",
  },
  "inputs": Array [
    undefined,
    null,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of null (reading 'lastIndexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Undefined | Object 1`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of [object Object]",
    "type": "Error",
  },
  "inputs": Array [
    undefined,
    Object {},
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Undefined | Object 2`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of [object Object]",
    "type": "Error",
  },
  "inputs": Array [
    undefined,
    Object {},
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Undefined | String 1`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of foo",
    "type": "Error",
  },
  "inputs": Array [
    undefined,
    "foo",
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Undefined | String 2`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of foo",
    "type": "Error",
  },
  "inputs": Array [
    undefined,
    "foo",
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Undefined | Undefined 1`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of undefined",
    "type": "Error",
  },
  "inputs": Array [
    undefined,
    undefined,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of undefined (reading 'indexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Undefined | Undefined 2`] = `
Object {
  "error": Object {
    "message": "Cannot read property 'indexOf' of undefined",
    "type": "Error",
  },
  "inputs": Array [
    undefined,
    undefined,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": Object {
    "message": "Cannot read properties of undefined (reading 'lastIndexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;
